--- a/css/common.css
+++ b/css/common.css
@@ -27,7 +27,17 @@ body{
 
 ul {list-style: none;
 }
-/* ======================================= Стили Хедера ========================== */
+
+h1,h2,h3,h4,h5,h6, p {
+    margin: 0;
+}
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* ===================================Стили Хедера ========================== */
 /* ================ Логотип ============ */
 .logo-header { 
     font-family: Raleway, sans-serif;
