--- a/css/common.css
+++ b/css/common.css
@@ -25,7 +25,10 @@ body{
     background-color: #ffffff;
   }
 
-ul {list-style: none;
+.list {list-style: none;
+    margin: 0px;
+    padding: 0;
+
 }
 
 h1,h2,h3,h4,h5,h6, p {
@@ -35,17 +38,30 @@ h1,h2,h3,h4,h5,h6, p {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+
+    outline: 2px solid blue;
 }
 
 /* ===================================Стили Хедера ========================== */
+
+header {
+    background-color: violet;
+}
 /* ================ Логотип ============ */
 .logo-header { 
+    display: inline-block;
     font-family: Raleway, sans-serif;
     font-size: 26px;
     font-weight: 700;
     line-height: 1.2;
     color: var(--secondary-text-color);
     text-decoration: none;
+
+    margin-top: 24px;
+    margin-bottom: 25px;
+    margin-left: 0;
 }
 
 .logo-header span{
