--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 /* =============================== Блок  Hero   ================================  */
 .hero {
     background: rgba(47, 48, 58, 0.8);
+    text-align: center;
     /* height: 600px; */
 }
 
@@ -23,6 +24,10 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.06em;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
 }
 
 .hero-btn {
@@ -33,8 +38,13 @@
     line-height: 1.9;
     font-weight: 700;
     letter-spacing: 0.06em;
+
     width: 200px;
     height: 50px;
+    padding: 10px 32px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
 
