--- a/css/common.css
+++ b/css/common.css
@@ -45,6 +45,18 @@ h1,h2,h3,h4,h5,h6, p {
 }
 
 /* ===================================Стили Хедера ========================== */
+/* ==== Flex-box Header============= */
+.header-flex {
+    display: flex;
+    align-items: center;
+    
+}
+
+/* ====  Flex-box навигации хедера=== */
+.header-nav {
+display: flex;
+
+}
 
 /* ================ Логотип ============ */
 .logo-header { 
@@ -59,14 +71,24 @@ h1,h2,h3,h4,h5,h6, p {
     margin-top: 24px;
     margin-bottom: 25px;
     margin-left: 0;
+    margin-right: 86px;
 }
 
 .logo-header span{
     font-family: Raleway, sans-serif;
     color: var(--color-acent);
+    
 }
 
 /* ==============  Навигация ============= */
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list > li:not(:last-child) {
+margin-right: 50px;
+}
 .site-nav{
     font-size: 14px; 
     font-weight: 500 ;
@@ -85,7 +107,17 @@ h1,h2,h3,h4,h5,h6, p {
 }
 
 /* ========== Контакты в навигации ========== */
+.nav-contacts {
+    display: flex;
+    margin-left: auto;
+}
+
+.nav-contacts > li:not(:first-of-type) {
+    margin-left: 30px;
+}
+
 .nav-contacts a{
+ 
  text-decoration: none;
  font-size: 14px;
  line-height: 1.1;
