--- a/css/common.css
+++ b/css/common.css
@@ -44,15 +44,15 @@ h1,h2,h3,h4,h5,h6, p {
     outline: 2px solid blue;
 }
 
-/* ===================================Стили Хедера ========================== */
-/* ==== Flex-box Header============= */
+/* ===========================================Стили Хедера ==================================== */
+/* ==== Flex-box Header   ============= */
 .header-flex {
     display: flex;
     align-items: center;
     
 }
 
-/* ====  Flex-box навигации хедера=== */
+/* ====  Flex-box навигации хедера===== */
 .header-nav {
 display: flex;
 
@@ -80,7 +80,7 @@ display: flex;
     
 }
 
-/* ==============  Навигация ============= */
+/* ==============  Навигация =========== */
 .nav-list {
     display: flex;
     align-items: center;
@@ -106,7 +106,7 @@ margin-right: 50px;
     color: var(--color-acent);
 }
 
-/* ========== Контакты в навигации ========== */
+/* ========== Контакты в навигации ======== */
 .nav-contacts {
     display: flex;
     margin-left: auto;
@@ -130,16 +130,19 @@ margin-right: 50px;
     color: var(--color-acent);
 }
 
-/* ================================ Футер  ====================================== */
+/* ================================      Футер          ====================================== */
 
 footer {
     background-color: var(--footer-bg-color);
 }
 
-footer .container {
+.footer-box {
+    display: flex;
+    align-items: center;
     padding-top: 60px;
     padding-bottom: 60px;
 }
+
 /*  ========  Логотип Футера  ============ */
 .logo-header.logo-footer {
     display: inline-block;
@@ -149,23 +152,26 @@ footer .container {
 }
 
 /* ======= Адрес, Тел, E-mail в футере ========== */
-.footer a{
+.foot-adress{
     text-decoration: none;
     font-size: 14px;
     line-height: 1.7;
     color: var(--footer-grey-text);
-    
 }
 
-.footer li {
+.footer-contacts li {
     margin-bottom: 9px;
 }
 
-.footer a:hover,
-.footer a:focus {
+.footer-contacts a:hover,
+.footer-contacts a:focus {
     color: var(--main-bg-color);
 }
 
+/* ======= Отступ от адреса ============== */
+.footer-contacts {
+    margin-right: 70px;
+}
 
 /* ========= Заголовки в футере   ========*/
 .title-footer {
@@ -177,7 +183,6 @@ footer .container {
     color: var(--main-bg-color);
 
     margin-bottom: 20px;
-    
 }
 
 /* ======= Ссылки на соцсети в футере   ============= */
@@ -185,9 +190,31 @@ footer .container {
     text-decoration: none;
     color: #FFFFFF;
     background-color: rgba(255, 255, 255, 0.1);
+    
+}
+
+.foot-list {
+    display: flex;
+    text-align: center;
+}
+/*  =====  Стили иконок соцсетей футера ============ */
+.foot-list a {
+    display: block;
+    width: 44px;
+    height: 44px;
+    padding-top: 12px;
+}
+
+.foot-list li:not(:last-child) {
+    margin-right: 10px;
 }
 
 /* ======= Поле ввода E-mail в футере   ============= */
+
+.footer-action {
+    margin-left: auto;
+}
+
 .footer-action input{
     font-size: 16px;
     color: var(--footer-grey-text);
@@ -198,11 +225,12 @@ footer .container {
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-
+    margin-right: 12px;
 }
 
 /* ======= Кнопка ПОДПИСАТЬСЯ в футере   ============= */
 .footer-btn {
+    display: block;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.9;
@@ -215,5 +243,9 @@ footer .container {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
+}
+
+.inpit-deco {
+    display: flex;
 }
 /* Тест из конспекта */
