--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -59,6 +59,7 @@ margin-bottom: 50px;
 }
 
 .jobs-descr {
+    display: none;
     font-size: 18px;
     letter-spacing: 0.03em;
     line-height: 1.5;
