--- a/css/common.css
+++ b/css/common.css
@@ -15,9 +15,7 @@
     --footer-grey-text: rgba(255, 255, 255, 0.6);
 }
 
-html{
-    box-sizing: border-box;
-}
+/* html{ box-sizing: border-box;}  этот стиль есть в Normalize-min */
 
 body{
     font-family: 'Roboto', sans-serif;
@@ -28,7 +26,6 @@ body{
 .list {list-style: none;
     margin: 0px;
     padding: 0;
-
 }
 
 h1,h2,h3,h4,h5,h6, p {
@@ -41,7 +38,7 @@ h1,h2,h3,h4,h5,h6, p {
     margin-left: auto;
     margin-right: auto;
 
-    outline: 2px solid blue;
+    /* outline: 2px solid blue; */
 }
 
 /* ===========================================Стили Хедера ==================================== */
