Add width: calc for all width

--- a/css/main.css
+++ b/css/main.css
@@ -55,10 +55,16 @@
 .adv-list {
     display: flex;
 } 
+
+.adv-list li {
+    width: calc((100%-90px)/4);
+}
+
 /* === Правый отступ между списками ======== */
 .adv-list > li:not(:last-child) {
     margin-right: 30px;
 }
+
 /* === Блок - Фон иконок в Преимуществах=======*/
 .adv-bg {
     background: var(--secondary-bg-color);
@@ -67,14 +73,16 @@
 
 /* =====  Margin внизу всей секции  ==========*/
 .advantage {
-    margin-bottom: 94px;
+    padding-bottom: 94px; 
 }
-.advantage h2 {
-  text-align: center;
-    margin-bottom: 30px;
-    color: coral;}
 
-/* ===== Margin изображений    =================*/
+.advantage h2 {
+    text-align: center;
+    margin-bottom: 30px;
+    color: coral;
+}
+
+/* ===== Margin иконок   =================*/
 .advantage img {
     display: block;
     margin-left: auto;
@@ -103,7 +111,6 @@
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-    width: 270px;
     height: 75px;
 }
 
@@ -113,6 +120,10 @@
     display: flex;
 }
 
+.works-list > li {
+    width: calc((100%-60px)/3);
+}
+
 .works-list > li:not(:last-child) {
     margin-right: 30px;
 }
@@ -120,6 +131,7 @@
 .works img {
     display: block;
 }
+
 /* ==== Заголовок секции ================= */
 .works-title {
     text-align: center;
@@ -130,7 +142,6 @@
 .works-subtitle {
     color: var(--main-bg-color);
     background-color: rgba(47, 48, 58, 0.8);
-    width: 370px;
     height: 70px;
     text-align: center;
 
@@ -170,7 +181,6 @@
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
     text-align: center;
-    width: 270px;
 
     margin-bottom: 10px;
 }
@@ -181,23 +191,24 @@ font-size: 16px;
 line-height: 1.2;
 letter-spacing: 0.03em;
 text-align: center;
-width: 270px;
 
 margin-bottom: 16px;
 }
-/* ========= Соцсети ====================== */
 
-.team a {
+/* ========= Соцсети ====================== */
+.team-social a {
     display: block;
     text-decoration: none;
     width: 44px;
     height: 44px;
+    border-radius: 50%;
     background: var(--secondary-bg-color);
+    padding-top: 12px;
 }
 
 /* ==== Карточка команды- Li */
 .team-card {
-    width: 270px;
+    width: calc((100%-90px)/4);
     background: var(--main-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
@@ -210,10 +221,6 @@ margin-bottom: 16px;
     margin-right: 32px;
     margin-bottom: 24px;
     text-align: center;
-}
-/* ===  Ссылка внутри Li-Соц. сети =======*/
-.team-social  a {
-    padding-top: 12px;
 }
 
 /* === Отступы в соцсетях команды ======== */
@@ -239,6 +246,7 @@ margin-bottom: 16px;
     text-align: center;
     padding-bottom: 94px;
 }
+
 /* ==== Ссылки на компании  ========== */
 .clients a {
     display: block;
