--- a/css/common.css
+++ b/css/common.css
@@ -38,26 +38,25 @@ h1,h2,h3,h4,h5,h6, p {
     margin-left: auto;
     margin-right: auto;
 
-    /* outline: 2px solid blue; */
+    outline: 2px solid coral;
 }
 
 /* ===========================================Стили Хедера ==================================== */
 /* ==== Flex-box Header   ============= */
 .header-flex {
     display: flex;
-    align-items: center;
-    
+    align-items: baseline;
+    padding-top: 24px;
 }
 
 /* ====  Flex-box навигации хедера===== */
 .header-nav {
 display: flex;
-
 }
 
 /* ================ Логотип ============ */
 .logo-header { 
-    display: inline-block;
+    display: block;
     font-family: Raleway, sans-serif;
     font-size: 26px;
     font-weight: 700;
@@ -65,8 +64,6 @@ display: flex;
     color: var(--secondary-text-color);
     text-decoration: none;
 
-    margin-top: 24px;
-    margin-bottom: 25px;
     margin-left: 0;
     margin-right: 86px;
 }
@@ -74,7 +71,6 @@ display: flex;
 .logo-header span{
     font-family: Raleway, sans-serif;
     color: var(--color-acent);
-    
 }
 
 /* ==============  Навигация =========== */
@@ -86,12 +82,15 @@ display: flex;
 .nav-list > li:not(:last-child) {
 margin-right: 50px;
 }
+
 .site-nav{
+    display: block;
     font-size: 14px; 
     font-weight: 500 ;
     line-height: 1.1;
     color: var(--secondary-text-color);
     text-decoration: none;
+    padding-bottom: 32px;
 }
 
 .site-nav:hover,
@@ -114,7 +113,6 @@ margin-right: 50px;
 }
 
 .nav-contacts a{
- 
  text-decoration: none;
  font-size: 14px;
  line-height: 1.1;
@@ -135,14 +133,13 @@ footer {
 
 .footer-box {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     padding-top: 60px;
     padding-bottom: 60px;
 }
 
 /*  ========  Логотип Футера  ============ */
 .logo-header.logo-footer {
-    display: inline-block;
    color: var(--main-bg-color);
    margin-top: 0;
    margin-bottom: 20px;
@@ -178,8 +175,6 @@ footer {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--main-bg-color);
-
-    margin-bottom: 20px;
 }
 
 /* ======= Ссылки на соцсети в футере   ============= */
@@ -193,6 +188,7 @@ footer {
 .foot-list {
     display: flex;
     text-align: center;
+    margin-top: 20px;
 }
 /*  =====  Стили иконок соцсетей футера ============ */
 .foot-list a {
@@ -245,5 +241,6 @@ footer {
 
 .inpit-deco {
     display: flex;
+    margin-top: 20px;
 }
 /* Тест из конспекта */
