--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,12 @@
 
 /* =====  Margin внизу всей секции  ==========*/
 .advantage {
+    padding-top: 94px;
     padding-bottom: 94px; 
 }
 
 .advantage h2 {
+    display: none;
     text-align: center;
     margin-bottom: 30px;
     color: coral;
