--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,8 @@
+header {
+    border-bottom: 1px solid #ECECEC;
+}
+   
+
 /* ====================== Кнопки-филтры ============================= */
 /* ========== Блок с кнопками ========= */
 .filter .list {
@@ -11,8 +16,9 @@
 
 /* === Отступ секции main/header/footer ==== */
 .main-box {
-    padding-top: 94px;
+    padding-top: 93px;
     padding-bottom: 94px;
+    
 }
 
 /* ==== Нижний отступ от фильтров ====== */
@@ -59,7 +65,7 @@
 .jobs a {
     display: inline-block;
     text-decoration: none;
-    border: 1px solid #EEEEEE;
+    
 }
 
 .jobs-list li:nth-last-child(-n+3) {
@@ -75,6 +81,10 @@
 
 .descr {
     padding: 20px 24px;
+    border-right: 1px solid #EEEEEE ;
+    border-bottom: 1px solid #EEEEEE;
+    border-left: 1px solid #EEEEEE;
+    
 }
 
 /* ======== Название проекта=========== */
