--- a/css/common.css
+++ b/css/common.css
@@ -37,8 +37,7 @@ h1,h2,h3,h4,h5,h6, p {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-
-    outline: 2px solid coral;
+    outline: 2px solid fuchsia;
 }
 
 /* ===========================================Стили Хедера ==================================== */
@@ -179,24 +178,22 @@ footer {
 
 /* ======= Ссылки на соцсети в футере   ============= */
 .foter-social a{
+    display: block;
     text-decoration: none;
+    width: 44px;
+    height: 44px;
+
     color: #FFFFFF;
     background-color: rgba(255, 255, 255, 0.1);
     
+    border-radius: 50%;
+    padding-top: 12px;   
 }
 
 .foot-list {
     display: flex;
     text-align: center;
     margin-top: 20px;
-}
-/*  =====  Стили иконок соцсетей футера ============ */
-.foot-list a {
-    display: block;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    padding-top: 12px;
 }
 
 .foot-list li:not(:last-child) {
