--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,16 @@
 
 /* =============================== Блок  Hero   ================================  */
 .hero {
-    background: rgba(47, 48, 58, 0.8);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/Header-img-min.jpg");
+    background-position: center;
+    background-size: cover;
     text-align: center;
-    padding: 200px 452px;
-    /* height: 600px; */
+    max-width: 1600px;
+    max-height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .hero-title {
@@ -21,7 +27,7 @@
     font-weight: 900;
     line-height: 1.4;
     color: #ffffff;
-    width: 696px;
+
     text-transform: uppercase;
     letter-spacing: 0.06em;
 
@@ -33,7 +39,6 @@
 .hero-btn {
   
     background-color: var(--color-acent);
-    text-decoration: none;
     color: var(--main-bg-color);
     font-size: 16px;
     line-height: 1.9;
