--- a/css/main.css
+++ b/css/main.css
@@ -72,10 +72,30 @@
 
 /* === Блок - Фон иконок в Преимуществах=======*/
 .adv-bg {
-    background: var(--secondary-bg-color);
+    background-color: var(--secondary-bg-color);
+    width: 100%;
+    height: 120px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 4px;
     margin-bottom: 30px;
 }
 
+.antenna {
+    background-image: url(../images/antenna.svg);
+}
+
+.clock {
+    background-image: url(../images/clock.svg);
+}
+
+.diagram {
+    background-image: url(../images/diagram.svg);
+}
+
+.astranaut {
+    background-image: url(../images/astronaut.svg);
+}
 /* =====  Margin внизу всей секции  ==========*/
 .advantage {
     padding-top: 94px;
