--- a/css/main.css
+++ b/css/main.css
@@ -233,16 +233,45 @@ text-align: center;
 margin-bottom: 16px;
 }
 
-/* ========= Соцсети ====================== */
-.team-social a {
+/* ========= Соцсети иконки  Вариант №1 ====================== */
+/* .team-social a {
     display: block;
     text-decoration: none;
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background: var(--secondary-bg-color);
-    padding-top: 12px;
+    background-repeat: no-repeat;
+    background-position: center;
+} */
+
+/* .icon-insta {background-image: url(../images/instagram.svg);}
+
+.icon-tweeter {background-image: url(../images/twitter.svg);}
+
+.icon-fb {background-image: url(../images/facebook.svg);}
+
+.icon-linedin {background-image: url(../images/linkedin.svg);} */
+
+/* ========= Соцсети иконки  Вариант №2 ====================== */
+
+.team-social a::after {
+    content: "";
+    display: block;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+.item-insta a::after { background-image: url(../images/instagram.svg);}
+
+.item-twiter a::after {background-image: url(../images/twitter.svg);}
+
+.item-fb a::after {background-image: url(../images/facebook.svg);}
+
+.item-linkedin a::after {background-image: url(../images/linkedin.svg);} 
+
 
 /* ==== Карточка команды- Li */
 .team-card {
